tests/fixtures/positive/a11y/ComposeTextFieldMissingLabel.kt
package com.example

import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Row
import androidx.compose.material3.OutlinedTextField
import androidx.compose.material3.TextField
import androidx.compose.runtime.Composable
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.setValue
import androidx.compose.runtime.remember

@Composable
fun MissingTextFieldLabels() {
    var email by remember { mutableStateOf("") }
    var name by remember { mutableStateOf("") }

    Column {
        TextField(
            value = email,
            onValueChange = { email = it },
        )
    }

    Row {
        OutlinedTextField(
            value = name,
            onValueChange = { name = it },
        )
    }
}
